Initial Migrations and registering DbContexts in Startup.cs

--- a/RetailWebsite/RetailWebsite/appsettings.json
+++ b/RetailWebsite/RetailWebsite/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Products": "Data Source=.;Initial Catalog=Products;Integrated Security=True",
+    "Orders": "Data Source=.;Initial Catalog=Orders;Integrated Security=True"
+  }
 }
