Fix entities looping issue

--- a/RetailWebsite/RetailWebsite/appsettings.json
+++ b/RetailWebsite/RetailWebsite/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Products": "Data Source=.;Initial Catalog=Products;Integrated Security=True",
-    "Orders": "Data Source=.;Initial Catalog=Orders;Integrated Security=True"
+    "ProductsConnection": "Data Source=.;Integrated Security=true;Initial Catalog=Products;App=RetailSite",
+    "OrdersConnection": "Data Source=.;Integrated Security=true;Initial Catalog=Orders;App=RetailSite"
   }
 }
