Working cart with sessions

--- a/RetailWebsite/RetailWebsite/appsettings.json
+++ b/RetailWebsite/RetailWebsite/appsettings.json
@@ -7,6 +7,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ProductsConnection": "Data Source=.;Integrated Security=true;Initial Catalog=Products;App=RetailSite",
-    "OrdersConnection": "Data Source=.;Integrated Security=true;Initial Catalog=Orders;App=RetailSite"
+    "OrdersConnection": "Data Source=.;Integrated Security=true;Initial Catalog=Orders;App=RetailSite",
+    "CartConnection": "Data Source=.;Integrated Security=true;Initial Catalog=Cart;App=RetailSite"
   }
 }
