--- a/RetailWebsite/RetailWebsite/RetailWebsite.csproj
+++ b/RetailWebsite/RetailWebsite/RetailWebsite.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
@@ -16,6 +17,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary1\CartDb.csproj" />
     <ProjectReference Include="..\OrdersDb\OrdersDb.csproj" />
     <ProjectReference Include="..\ProductsDb\ProductsDb.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
